--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
                             height="30"
                         />
                         {% endif %}
-                        <strong>{{ msg.username }}:</strong> {{ msg.text }}
+                        <strong>{{ msg[0] }}:</strong> {{ msg[1] }}
                     </li>
                     {% endfor %}
                 </ul>
