--- a/templates/profile.html
+++ b/templates/profile.html
@@ -34,7 +34,7 @@
             <button type="submit">Güncelle</button>
         </form>
         <!-- Ana sayfaya dönüş butonu -->
-        <a href="{{ url_for('index') }}"><button>Ana Sayfaya Dön</button></a>
+        <a href="{{ url_for('home') }}"><button>Ana Sayfaya Dön</button></a>
         <p><a href="{{ url_for('logout') }}">Çıkış Yap</a></p>
     </body>
 </html>
